        Fix handling of empty matrix objects (#3541)
        Add methods to GCOMObservation class to access DRI filenames
        Add GModelSpectralFunc methods to build file function in memory (#3535)
        Add GCTABackground2D class (#3527)
        Implement vectorised response computation for COMPTEL (#3501)
        Fix response cache removal for vector cache (#3499)
        Add GModelAssociation and GModelAssociations classes (#3469)
        Add GSkyMap::correlate() method (#3461)
        Add GModels::eval() vector evaluation method (#3455)
        Fix GSkyMap::stack_maps() method for WCS maps
        Add GCTAModelSkyCube class (#3442)
        Add GSkyModel flux() and eflux() methods (#3439)
        Add XML value constructors and access methods to GXmlElement class (#3431)
        Correct application elapsed CPU time for OpenMP (#3417) 
        Implement sparse vector response cache (#3403)
        Support spectral line fitting (#3386)
        Implement GMatrixSparse::row() and GMatrixSparse::add_to_row() methods
        Integrate analytical gradients for energy dispersion computation (#3333)
        Add GFunctions abstract base class (#3328)
        Add GIntegrals class (#3328)
        Remove implicit conversion warnings (#3324)
        Add gammalib::tmpnam() function (#3324)
        Add GSkyDirs container class (#3324)
        Add GSkyRegionRect class (#3248)
        Implement vectorised response computation (#3203)
        Implement analytical gradients for the radial Gaussian model in a
          stacked analysis (#3203)
        Add GSkyModel flux_error() and eflux_error() methods (#3074)
        Remove COMPTEL internal response caching (#2973)
        Add GSkyMap::flux(GRegion(s)) and GSkyMap::solidangle(GRegion(s)) methods (#1785)
        Reimplement GModelSpatial::flux() method for diffuse and combined models (#1785)
        Implement pre-computation cache in GModelSpatialGauss (#1300)
        Replace specific by generic exceptions (#35)


2021-04-28
